tests/parser/valid/statements/if.src
fn test(int x) {
    if (x > 0) {
        return x;
    }
    
    if (x < 0) {
        return -x;
    } else {
        return 0;
    }
}
