tests/parser/invalid/syntax_errors/unclosed_brace.src
fn test() {
    int x = 5;
    if (x > 0) {
        return x;
    // missing closing brace
